# example-module

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.org  arduino-libraries  compile  test
core/: CMakeLists.txt  app-protobuf.cpp  app-protobuf.h  arduino-libraries  attached-devices.cpp  attached-devices.h  config.h.template  example-core.cpp  fk-core.cpp  fk-core.h  main.cpp  wifi.cpp  wifi.h
modules/: attached-sensors.h  comms.cpp  comms.h  debug.cpp  fk-general.h  fk-module.cpp  fk-module.h  protobuf.cpp  protobuf.h  rtc.h
src/: CMakeLists.txt  apr_ring.h  arduino-libraries  attached-devices.cpp  attached-devices.h  attached-sensors.h  comms.cpp  comms.h  config.h.template  debug.cpp  debug.h  dependencies.sd  example-module.cpp  fk-core.cpp  fk-core.h  fk-general.h  fk-master.cpp  fk-master.h  fk-module-dummy.cpp  fk-module.cpp  fk-module.h  fk-pool.cpp  fk-pool.h  main.cpp  protobuf.cpp  protobuf.h  readings.h  wifi.cpp
